# sansan-competition

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  ROLE.md  firebase.json  main.py  pyproject.toml
docs/: firebase-hosting-cloud-run-setup.md  google-classroom-cli-oauth-setup.md  google_api_setup.md  lesson-knowledge-integration.md  ngrok-local-oauth-setup.md
public/: app.js  styles.css
samples/: announcement_draft_success.json  course_summary_success.json  coursework_summary_success.json  document_export_success.json  error_analysis_success.json  reminder_generation_success.json  rubric_support_success.json  submission_analysis_error.json  submission_analysis_partial_success.json  submission_analysis_success.json  weekly_report_success.json
sansan_competition/: __init__.py  analysis.py  classroom.py  contract.py  contracts.py  exporters.py  hinata.py  kimu_regression_gate.py  lesson.py  models.py  normalization.py  oauth.py  outputs.py  pr_automation.py  review_implementation_agent.py  workspace.py
schemas/: agent-output-v1.0.0.json  lesson-bundle-v1.0.0.json
scripts/: classroom_fetch_analysis.py  classroom_oauth_smoke.py  classroom_post_reminder.py  deploy_firebase_cloud_run.sh  export_outputs.py  kimu_regression_gate.py  monitor_prs.sh  monitor_review_implementation_agent.sh  pr_automation.py  review_implementation_agent.py  start_gui_with_ngrok.sh
tests/: __init__.py  test_analysis.py  test_classroom.py  test_contract.py  test_execution_google.py  test_execution_integration.py  test_execution_renderers.py  test_exporters.py  test_hinata.py  (+9 more)
(+3 files in other folders)
