[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sansan-competition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "reportlab>=4.0",
]

[project.optional-dependencies]
google = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
[tool.setuptools]
packages = ["sansan_competition"]
py-modules = ["main"]
